# packages/rest-api/public/swagger.json
@@ -268,8 +268,7 @@
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"RoomWithoutMessage": {
-				"$ref": "#/components/schemas/Omit_IRoom.lastMessage_",
-				"description": "Problem with tuples https://github.com/lukeautry/tsoa/issues/685"
+				"$ref": "#/components/schemas/Omit_IRoom.lastMessage_"
 			},
 			"LivechatMessageTypes": {
 				"type": "string",
@@ -1656,7 +1655,7 @@
 					}
 				]
 			},
-			"Pick_IMessage.Exclude_keyofIMessage.blocks-or-urls-or-location__": {
+			"Pick_IMessage.Exclude_keyofIMessage.MessageFieldsIgnored__": {
 				"properties": {
 					"_id": {
 						"type": "string"
@@ -2166,12 +2165,12 @@
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
-			"Omit_IMessage.blocks-or-urls-or-location_": {
-				"$ref": "#/components/schemas/Pick_IMessage.Exclude_keyofIMessage.blocks-or-urls-or-location__",
+			"Omit_IMessage.MessageFieldsIgnored_": {
+				"$ref": "#/components/schemas/Pick_IMessage.Exclude_keyofIMessage.MessageFieldsIgnored__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"MessageCompatible": {
-				"$ref": "#/components/schemas/Omit_IMessage.blocks-or-urls-or-location_"
+				"$ref": "#/components/schemas/Omit_IMessage.MessageFieldsIgnored_"
 			},
 			"IUserEmailVerificationToken": {
 				"properties": {
@@ -2708,8 +2707,7 @@
 						"name": "roomId",
 						"required": true,
 						"schema": {
-							"format": "double",
-							"type": "number"
+							"type": "string"
 						}
 					},
 					{
